--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../images/icons/favikon-32.svg" alt="Фавиконка сайта Седоны." sizes="32x32" type="image/svg+xml">
+    <link rel="icon" href="../images/icons/favicon.png" alt="Фавиконка сайта Седоны." sizes="32x32" type="image/png">
     <link rel="stylesheet" href="styles/style.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> главная страница</title>
     <!-- <base href="https://htmlacademy-htmlcss.github.io/2288781-sedona-38/.."> -->
@@ -12,7 +12,8 @@
 
   <body>
     <!-- Меню главной страницы -->
-    <header class="page-header">
+
+    <header class="main-header" data-test="header">
       <!-- Заголовок меню в главной странице (скрытый) -->
       <h1 class="visually-hidden">Меню главной страницы</h1>
       <!-- Меню -->
@@ -20,19 +21,19 @@
         <!-- Подзаголовок навигации (скрытый) -->
         <h2 class="visually-hidden">Навигация</h2>
         <!-- Основной логотип города Седоны-->
-        <a class="page-header-logo" aria-current="index.html" aria-current="page">
+        <a class="main-header-logo" aria-current="index.html">
           <img class="navigation-logo" src="../images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
         </a>
         <!-- Список первой части меню -->
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" aria-current="page">Главная</a>
+            <a class="navigation-link navigation-text navigation-text-current navigation-link-current" aria-current="page">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-text" href="catalog.html">Гостиницы</a>
+            <a class="navigation-link navigation-text" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <!-- Список второй части меню -->
@@ -45,26 +46,27 @@
           <li class="navigation-item">
             <a class="navigation-link icon-heart" href="#">
               <span class="visually-hidden">Избранное</span>
-            </a>rt
+              <span class="user-favorite-count">12</span>
+            </a>
           </li>
-          <li>
-            <form>
-              <a class="btn navigation-button" href="catalog.html">
-                <button type="button">Хочу сюда!</button>
-              </a>
-            </form>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">
+              <button class="navigation-button text-small" type="button" >
+                <span>Хочу сюда!</span>
+              </button>
+            </a>           
           </li>
         </ul>
       </nav>
     </header>
 
     <!-- Основное содержимое главной страницы -->
-    <main class="main-index">
+    <main class="main" data-test="main">
       <!-- Заголовок главной страницы (скрытый) -->
       <h1 class="visually-hidden">Cайт поиска отелей в городе Седоне</h1>
 
       <!-- Первая секция - основной смысл главной страницы -->
-      <section class="hero">
+      <section class="hero" data-test="hero">
         <!-- Подзаголовок cекции основного смысла главной страницы (скрытый) -->
         <h2 class="visually-hidden">Добро пожаловать в великолепный город Седона!</h2>
         <div class="hero-logo">
@@ -73,7 +75,7 @@
       </section>
 
       <!-- Вторая секция - причины, заслуживающие внимания -->
-      <section class="advantages">
+      <section class="advantages" data-test="advantages">
         <!-- Подзаголовок секции "Причины" -->
         <h2>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
         <p class="advantages-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -137,7 +139,7 @@
               <p class="services-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
             </li>
             <li class="services-item">
-              <object type="image/svg+xml" data="images/icons/food.svg">
+              <object data="images/icons/food.svg">
                 <img src="../images/icons/food.svg" width="75" height="72" role="img" aria-label="Бургер" type="image/svg+xml">
               </object>
               <br>
@@ -145,7 +147,7 @@
               <p class="services-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
             </li>
             <li class="services-item">
-              <object type="image/svg+xml" data="images/icons/souvenir.svg">
+              <object data="images/icons/souvenir.svg">
                 <img src="../images/icons/souvenir.svg" width="75" height="72" role="img" aria-label="Сувенир" type="image/svg+xml">
               </object>
               <br>
@@ -157,12 +159,12 @@
       </section>
 
       <!-- Четвертая секция - интерес -->
-      <section class="interest">
+      <section class="interest" data-test="search">
         <!-- Подзаголовок секций "Интерес" -->
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <form>
-          <a class="btn interest-button" href="catalog.html">
+          <a class="buttons-basic interest-button" href="catalog.html">
             <button type="button">
               <span>Поиск гостиницы в Седоне</span>
             </button>
@@ -171,63 +173,55 @@
       </section>
 
       <!-- Пятая секция - рассылка -->
-      <section class="mailing">
-        <!-- Подзаголовок секций "Рассылка" -->
-        <h2>Подпишитесь на рассылку</h2>
-          <div class="mailing-item">
-            <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
-            <form class="mailing-form" id="form" action="https://echo.htmlacademy.ru/" method="post">
-              <input name="email" type="email" placeholder="Ваш e-mail" href="mailto:email@example.com" required>
-              <button class="btn mailing-form-button mailing-form-button-text" type="submit">
-                <span>Подписаться</span>
-              </button>
-            </form>
-          </div>
+      <section class="mailing mailing-subscribe" data-test="subsribe">
+        <h2 class="mailing-title">Подпишитесь на рассылку</h2>
+        <!-- Подзаголовок секций "Рассылка" -->          
+        <p class="mailing-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>          
+        <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="mailto:email@example.com">
+          <p class="mailing-form-name">
+            <label for="user-mail">Ваш e-mail</label>
+            <input  type="email" id="user-email" name="user-email" placeholder="Ваш e-mail" required>
+          </p>
+          <button class="mailing-button" type="submit">Подписаться</button>
+        </form>
       </section>
-
     </main>
 
-    <footer class="footer-page">
-      <h2 class="visually-hidden">Подзаголовок подвала главной страницы</h2>
-      <nav class="footer-navigation">
-        <h3 class="visually-hidden">Подзаголовок контактной части</h3>
-        <div class="footer-social-list">
-          <ul class="footer-social-item">
-            <li class="footer-social-link">
-              <a class="icon-vk" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Российская социальная сеть «ВКонтакте»</span>
-              </a>
-            </li>
-            <li class="footer-social-link">
-              <a icon-telegram" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Канал в Telegram</span>
-              </a>
-            </li>
-            <li class="footer-social-link">
-              <a class="icon-youtube" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Видеохостинг Youtube</span>
-              </a>
-            </li>
-        </div>
-        <div class="footer-phone">
-          <ul class="footer-phone-item">
-            <li class="footer-phone-link">
-              <a href="tel:+7(812)812-12-12">
-                <span>+7(812)812-12-12</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-logo">
-          <ul class="footer-logo-item">
-            <li class="footer-logo-link">
-              <a class="icon-html" href="https://htmlacademy.ru/">
-                <span class="visually-hidden">Бренд логотипа HTML Academy.</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    <footer class="main-footer" data-test="footer">
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <a href="https://vk.com/htmlacademy">
+            <img src="images/icons/vk-focus.svg" width="24" height="14" alt="Российская социальная сеть «ВКонтакте».">
+            <span class="visually-hidden">ВКонтакте</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a href="https://t.me/htmlacademy">
+            <img src="images/icons/telegram-focus.svg" width="18" height="16" alt="Мессенджер «Telegram».">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a href="https://www.youtube.com/user/htmlacademyru">
+            <img src="images/icons/youtube-focus.svg" width="22" height="17" alt="Видеохостинг Youtube.">
+            <span class="visually-hidden">Youtube</span>
+          </a>
+        </li>
+      <ul class="footer-phone-item">
+        <li class="footer-phone-link">
+          <a class="text-phone" href="tel:+7(812)812-12-12">
+            <span>+7(812)812-12-12</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="footer-logo-item">
+        <li class="footer-logo-link">
+          <a href="https://htmlacademy.ru/">
+            <img src="images/brand=htmlacademy.svg" width="114.9" height="32.9" alt="Видеохостинг Youtube.">
+            <span class="visually-hidden">HTML Academy</span>
+          </a>
+        </li>
+      </ul>
     </footer>
 
   </body>
