--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <!-- Подзаголовок навигации (скрытый) -->
         <h2 class="visually-hidden">Навигация</h2>
         <!-- Основной логотип города Седоны-->
-        <a class="main-header-logo" aria-current="index.html">
-          <img class="navigation-logo" src="../images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
+        <a class="main-header-logo" aria-current="page">
+          <img src="../images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
         </a>
         <!-- Список первой части меню -->
         <ul class="navigation-list">
@@ -42,6 +42,9 @@
             <a class="navigation-link icon-search" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
+              <path d="M18.5 17.0083L14.8 13.3287C15.8 12.0359 16.5 10.3453 16.5 8.4558C16.5 4.08011 12.9 0.5 8.5 0.5C4.1 0.5 0.5 4.17956 0.5 8.55525C0.5 12.9309 4.1 16.511 8.5 16.511C10.3 16.511 12 15.9144 13.4 14.8204L17.1 18.5L18.5 17.0083ZM8.5 14.5221C5.2 14.5221 2.5 11.837 2.5 8.55525C2.5 5.27348 5.2 2.5884 8.5 2.5884C11.8 2.5884 14.5 5.27348 14.5 8.55525C14.5 11.837 11.8 14.5221 8.5 14.5221Z" fill="black"/>
+            </svg>
           </li>
           <li class="navigation-item">
             <a class="navigation-link icon-heart" href="#">
@@ -54,7 +57,7 @@
               <button class="navigation-button text-small" type="button" >
                 <span>Хочу сюда!</span>
               </button>
-            </a>           
+            </a>
           </li>
         </ul>
       </nav>
@@ -175,8 +178,8 @@
       <!-- Пятая секция - рассылка -->
       <section class="mailing mailing-subscribe" data-test="subsribe">
         <h2 class="mailing-title">Подпишитесь на рассылку</h2>
-        <!-- Подзаголовок секций "Рассылка" -->          
-        <p class="mailing-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>          
+        <!-- Подзаголовок секций "Рассылка" -->
+        <p class="mailing-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
         <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="post" href="mailto:email@example.com">
           <p class="mailing-form-name">
             <label for="user-mail">Ваш e-mail</label>
