Продолжает исправлять стилизацию.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- Заголовок меню в главной странице (скрытый) -->
       <h1 class="visually-hidden">Меню главной страницы</h1>
       <!-- Меню -->
-      <nav class="navigation">
+      <nav class="main-navigation">
         <!-- Подзаголовок навигации (скрытый) -->
         <h2 class="visually-hidden">Навигация</h2>
         <!-- Основной логотип города Седоны-->
@@ -27,7 +27,7 @@
         <!-- Список первой части меню -->
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-text navigation-text-current navigation-link-current" aria-current="page">Главная</a>
+            <a class="navigation-link navigation-text navigation-link-current" aria-current="page">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
@@ -54,7 +54,7 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">
-              <button class="navigation-button text-small" type="button" >
+              <button class="navigation-button button-navigation-text type="button" >
                 <span>Хочу сюда!</span>
               </button>
             </a>
