:heavy_check_mark: Сборка #5

--- a/5/index.html
+++ b/5/index.html
@@ -55,7 +55,7 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">
-              <button class="navigation-button button-navigation-text type="button" >
+              <button class="navigation-button type="button" >
                 <span>Хочу сюда!</span>
               </button>
             </a>
