--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
       <footer class="main-footer" data-test="footer">
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a href="https://vk.com/htmlacademy">
+            <a class="footer-social-link" href="https://vk.com/htmlacademy">
               <img src="images/icons/vk-focus.svg" width="24" height="14" alt="Российская социальная сеть «ВКонтакте».">
               <span class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a href="https://t.me/htmlacademy">
+            <a class="footer-social-link" href="https://t.me/htmlacademy">
               <img src="images/icons/telegram-focus.svg" width="18" height="16" alt="Мессенджер «Telegram».">
               <span class="visually-hidden">Telegram</span>
             </a>
@@ -216,7 +216,7 @@
         </ul>
         <ul class="footer-logo-item">
           <li class="footer-logo-link">
-            <a href="https://htmlacademy.ru/">
+            <a class="logo-htmlacademy" href="https://htmlacademy.ru/">
               <img src="images/brand=htmlacademy.svg" width="114.9" height="32.9" alt="Видеохостинг Youtube.">
               <span class="visually-hidden">HTML Academy</span>
             </a>
